# rag-search-engine

./: .gitignore  README.md  get_data.sh  pyproject.toml
.github/workflows/: ci.yml
cli/: augmented_generation_cli.py  evaluation_cli.py  gemini.py  hybrid_search_cli.py  keyword_search_cli.py  semantic_search_cli.py
cli/hybrid_search/: hybrid_search.py  normalisation.py
cli/llm_shenanigans/: llm_utils.py  query_enhancement.py  reranking.py
cli/rag/: prompts.py
cli/semantic_search/: chunked_semantic_search.py  semantic_search.py
cli/tf_idf/: inverted_index.py
cli/utils/: constants.py  files.py  models.py  query_enhancement.py  search.py  text_processing.py
tests/cli/semantic_search/: test_semantic_search.py
tests/cli/tf_idf/: test_inverted_index.py
tests/cli/utils/: test_search.py  test_text_processing.py
